@@ -1,3 +1,10 @@
+2008-06-03  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/admin/gtk/adminwindow.py
+	(AdminWindow._runConfigurationWizard):
+	Clean the state before running the configuration wizard,
+	fixes #998.
+
 2008-06-02  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/admin/gtk/componentlist.py: Rename iter to titer
